--- a/style.css
+++ b/style.css
@@ -33,8 +33,8 @@ body,main {
 /* Card styles */
 .card {
     background: var(--card-bg);
-    max-width: 24rem;
-    padding: 1.2rem;
+    max-width: 20.5rem;
+    padding: 1.5rem;
     border: .1rem solid var(--border-color);
     border-radius: var(--border-radius);
     box-shadow: 8px 8px 0 0 var(--border-color);
@@ -70,7 +70,7 @@ time {
 
 a {
     display: block;
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     margin-block-end: var(--margin-block-end);
     font-weight: 800;
     color: var(--text-color);
@@ -83,7 +83,7 @@ a:hover {
 
 
 p {
-    font-size: 1rem;
+    font-size: .88rem;
     font-weight: 500;
     line-height: 1.5;
     margin-block-end: 1.5rem;
